src/style/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');

* {
  width: 100%;
  font-family: 'Poppins', sans-serif;
}

*:focus {
  outline: none;
  box-shadow: none;
}

.reg {
  height: 80vh;
}

.main {
  height: 100vh;
}

.instruction {
  padding: 2rem;
}

.icon {
  width: 16rem;
}

.custom-editor-description ul,
.custom-editor-description ol {
  list-style: inherit;
  list-style-position: inside;
}

/* .pagetitle-container {
  @apply my-4 p-4;
}

.page-heading {
  @apply text-lg border-l-6 border-indigo-700 pl-4;
}

.purpule-button {
  @apply font-medium rounded-md text-white bg-indigo-600 transition duration-150 ease-in-out w-auto p-4;
}

.purpule-button:focus {
  @apply outline-none border-indigo-700 ring;
}

.purpule-button:hover {
  @apply border-indigo-500;
}

.purpule-button:active {
  @apply border-indigo-700;
} */

/*** MODAL STYLES ***/

.backdrop.fade-in {
  opacity: 0.25;
  animation-name: backdropFadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 0.2s;
}

.toolbarClassName {
  border: 1.5px solid #f1f1f1;
}

.toolItemClassName {
  width: auto;
}

.toolItemClassName > div {
  width: auto;
}

.toolbarClassName > div {
  width: auto;
}

.dropdownClassName {
  width: 50px !important;
  z-index: unset !important;
}

.dropdownBlockClassName {
  width: 100px !important;
}

.dropdownClassName img {
  width: unset;
}

.plainText a {
  text-decoration: none;
  color: black;
}

.wrapperClassName {
  background-color: white;
  min-height: 15rem;
  height: 100%;
}

.editorClassName {
  height: 12rem !important;
  border: 1.5px solid #f1f1f1;
  padding: 5px;
  border-radius: 2px;
}

/* .editorClassName h1 h2 h3 h4 h5 h6 {
  font-size: initial;
} */

.editorClassName p,
span {
  margin: unset;
}

@keyframes backdropFadeInOpacity {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 0.25;
  }
}

.modal.show {
  opacity: 1;
  visibility: visible;
  transform: translate(0, 0);
  animation-name: modalShow;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 0.2s;
}

@keyframes modalShow {
  0% {
    visibility: hidden;
    opacity: 0;
    transform: translate(0, -20px);
  }

  100% {
    visibility: visible;
    opacity: 1;
    transform: translate(0, 0);
  }
}

/* ----- */

@media screen and (max-width: 767px) {
  .main {
    height: auto;
  }

  .reflection {
    height: 6rem;
    width: 100%;
    font-size: 14px;
  }

  .question {
    font-size: 12px;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    overflow: scroll;
  }

  .instruction {
    padding: 1rem;
  }

  .icon-font {
    font-size: 0.5rem;
  }

  .header-font {
    font-size: 1.5rem;
  }

  .sidebar {
    position: absolute;
    bottom: 0;
    height: 10%;
    width: 100vw;
    display: flex;
    font-size: 12px;
    align-items: center;
  }

  .sidebar a {
    width: 10rem;
  }

  .link {
    display: flex;
    margin-bottom: 0;
    font-size: 12px;
    padding-left: 1rem;
  }

  #Registration {
    font-size: 12px;
  }

  #Classroom {
    font-size: 12px;
  }

  .center {
    display: flex;
    justify-content: center;
  }

  .picture {
    background-size: 22rem;
  }

  .column-center {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .banner {
    margin-top: 0.5rem;
    margin-bottom: 1rem;
    width: 100%;
    height: 4rem;
  }

  .red {
    color: red;
    height: 4rem;
    width: 4rem;
  }

  .title {
    font-size: 2rem;
    padding: 0.5rem;
    height: 4rem;
  }
}

